Fixed background image not showing up.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,6 @@
 :root {
-    background-image: url(../images/Back.jpg);
-    background-color: black;
-    background-size: cover;
+/*    background-image: url(Assets/images/Back.jpg);
+    background-size: cover;  ------------------------- works in "open in browser, but does not work in chrome, put background image in HTML body instead.*/
     --borderRadius: 1rem;
     --fontStyle: sans-serif, Courier, monospace;
 }
@@ -10,6 +9,7 @@
     font-family: var(--fontStyle);
     margin: 0px;
 }
+
 
 #timer {
     font-size: 32px;
